--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: [Assignment 07]
 description: [Pickling and Exceptions]
+logo: [https://www.python.org/static/community_logos/python-logo-master-v3-TM.png]
