--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: [Assignment 07]
-description: [Pickling and Exceptions]
+description: [Learning to use Pickling and Exceptions in Python]
 logo: [docs/pickle.png]
