--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: [Assignment 07]
 description: [Learning to use Pickling and Exceptions in Python]
-logo: [/docs/pickle.png]
+logo: [(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.netclipart.com%2Fisee%2FibhTThb_transparent-pickle-png-pickle-cartoon-png%2F&psig=AOvVaw340iW9C5Z8r2Gyn-kgYVSF&ust=1591149910065000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNiejL-F4ukCFQAAAAAdAAAAABAK)]
