--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: [Assignment 07]
 description: [Learning to use Pickling and Exceptions in Python]
-logo: [https://aasgekar.github.io/IntroToProg-Python-Mod07/docs/images/pickle.png]
+logo: [docs/images/pickle.png]
